syntax = "proto3";

package bookingService;

import "proto/sdk/sdk.proto";

option go_package = "booking-service/proto/booking";

service bookingService {
  rpc GetBookingDetail(MsgGetBookingRequest) returns (sdk.BaseResponse);
}

message MsgGetBookingRequest {
  int64 bookingId = 1;
}

// message MsgRegister {
//   string email = 1;
//   string firstName = 2;
//   string lastName = 3;
//   string password = 4;
//   string userAgent = 5;
//   string ipAddress = 6;
//   string deviceId = 7;
// }